<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/preference_category_theme"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="pref_theme_mode"
            android:title="@string/preference_list_theme"
            android:entries="@array/theme_mode_entries"
            android:entryValues="@array/theme_mode_values"
            android:defaultValue="system"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="pref_theme_contrast"
            android:title="@string/preference_list_contrast"
            android:entries="@array/theme_contrast_entries"
            android:entryValues="@array/theme_contrast_values"
            android:defaultValue="standard"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="pref_dynamic_color"
            android:title="@string/preference_switch_dynamic_colors_title"
            android:summary="@string/preference_switch_dynamic_colors_summary"
            app:widgetLayout="@layout/view_preference_switch"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_security"
        app:iconSpaceReserved="false">

        <Preference
            android:key="pref_app_lock"
            android:title="@string/preference_app_lock_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="pref_security_screen"
            android:title="@string/preference_switch_screen_privacy_title"
            android:summary="@string/preference_switch_screen_privacy_summary"
            app:widgetLayout="@layout/view_preference_switch"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="pref_biometric_enabled"
            android:title="@string/preference_switch_biometric_title"
            android:summary="@string/preference_switch_biometric_summary"
            app:widgetLayout="@layout/view_preference_switch"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_permissions"
        app:iconSpaceReserved="false">

        <Preference
            android:key="pref_exact_alarms"
            app:iconSpaceReserved="false"
            android:title="@string/preference_exact_alarms_title" />

        <Preference
            android:key="pref_notifications"
            app:iconSpaceReserved="false"
            android:title="@string/preference_notification_title" />
    </PreferenceCategory>
</PreferenceScreen>