<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/Widget.Keyheimer.Toolbar"
            app:titleTextColor="?attr/colorOnSurface"
            app:title="@string/toolbar_main" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_secrets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/list_bottom_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/empty_state_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_empty_kaomoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_indicator_kaomoji"
            android:textColor="?attr/colorOnSurface"
            android:textAppearance="?attr/textAppearanceHeadlineLarge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/empty_indicator_main"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textAppearance="?attr/textAppearanceTitleSmall" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_secret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        app:layout_behavior="com.google.android.material.behavior.HideViewOnScrollBehavior"
        android:contentDescription="@string/tooltip_add_secret"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>